--- a/docker/gollum/Dockerfile-from-src
+++ b/docker/gollum/Dockerfile-from-src
@@ -21,26 +21,38 @@ MAINTAINER Fan Hongtao <fanhongtao@gmail.com>
 
 RUN \
 # Switch mirrors for Alpine & Ruby
-    cp /etc/apk/repositories /etc/apk/repositories.bak \
-    && echo "http://mirrors.aliyun.com/alpine/v3.12/main/" > /etc/apk/repositories \
-    && gem sources --add https://gems.ruby-china.com/ --remove https://rubygems.org/ \
+    cp /etc/apk/repositories /etc/apk/repositories.bak; \
+    echo "http://mirrors.aliyun.com/alpine/v3.12/main/" > /etc/apk/repositories; \
+    gem sources --add https://gems.ruby-china.com/ --remove https://rubygems.org/; \
 # Install
-    && apk update \
-    && apk add --no-cache make gcc g++ libc-dev icu-dev cmake openssl-dev icu-libs git \
-    && gem install github-linguist
+    apk add --no-cache --virtual .build-deps \
+            cmake \
+            g++ \
+            gcc \
+            icu-dev \
+            libc-dev \
+            make \
+            openssl-dev \
+    ; \
+    apk add --no-cache --virtual .run-deps \
+            git \
+            icu-libs \
+    ; \
+    gem install github-linguist
 
 RUN \
-    cd /home \
+    cd /home; \
 # Because clone from github is too slow, I clone repository gollum into gitee.
-#   && git clone https://github.com/gollum/gollum
-    && git clone https://gitee.com/fhtao/gollum
+#   git clone https://github.com/gollum/gollum
+    git clone https://gitee.com/fhtao/gollum
 
 # build from source
-RUN cd /home/gollum \
-    && sed -i 's/rubygems.org/gems.ruby-china.com/' Gemfile \
-    && bundle install
+RUN cd /home/gollum; \
+    git log -n 1; \
+    sed -i 's/rubygems.org/gems.ruby-china.com/' Gemfile; \
+    bundle install
 
-RUN addgroup wiki && adduser -G wiki -D wiki
+RUN addgroup wiki; adduser -G wiki -D wiki
 USER wiki
 
 WORKDIR /wiki
@@ -48,4 +60,4 @@ WORKDIR /home/gollum
 
 EXPOSE 4567
 
-ENTRYPOINT [ "bundle", "exec", "bin/gollum", "--mathjax", "--adapter", "rugged", "--js", "--css", "-c", "config.rb", "/wiki" ]
+ENTRYPOINT [ "bundle", "exec", "bin/gollum", "--mathjax", "--port", "4567", "--adapter", "rugged", "--js", "--css", "-c", "config.rb", "/wiki" ]
