--- a/docker/gollum/Dockerfile-from-src
+++ b/docker/gollum/Dockerfile-from-src
@@ -19,11 +19,22 @@ FROM ruby:alpine
 
 MAINTAINER Fan Hongtao <fanhongtao@gmail.com>
 
-RUN \
+RUN set -eux; \
 # Switch mirrors for Alpine & Ruby
     cp /etc/apk/repositories /etc/apk/repositories.bak; \
     echo "http://mirrors.aliyun.com/alpine/v3.12/main/" > /etc/apk/repositories; \
     gem sources --add https://gems.ruby-china.com/ --remove https://rubygems.org/; \
+# Install
+    apk add --no-cache --virtual .run-deps \
+            git \
+            icu-libs \
+    ; \
+    cd /home; \
+# Because clone from github is too slow, I clone repository gollum into gitee.
+#   git clone https://github.com/gollum/gollum
+    git clone https://gitee.com/fhtao/gollum
+
+RUN set -eux; \
 # Install
     apk add --no-cache --virtual .build-deps \
             cmake \
@@ -34,23 +45,14 @@ RUN \
             make \
             openssl-dev \
     ; \
-    apk add --no-cache --virtual .run-deps \
-            git \
-            icu-libs \
-    ; \
-    gem install github-linguist
-
-RUN \
-    cd /home; \
-# Because clone from github is too slow, I clone repository gollum into gitee.
-#   git clone https://github.com/gollum/gollum
-    git clone https://gitee.com/fhtao/gollum
-
+    gem install github-linguist; \
 # build from source
-RUN cd /home/gollum; \
+    cd /home/gollum; \
     git log -n 1; \
     sed -i 's/rubygems.org/gems.ruby-china.com/' Gemfile; \
-    bundle install
+    bundle install; \
+# Delete unnecessary packages
+    apk del .build-deps
 
 RUN addgroup wiki; adduser -G wiki -D wiki
 USER wiki
