use '&&' instead of ';'

--- a/docker/aria2/Dockerfile
+++ b/docker/aria2/Dockerfile
@@ -2,13 +2,13 @@ FROM alpine
 
 LABEL maintainer="Fan Hongtao <fanhongtao@gmail.com>"
 
-RUN set -eux; \
+RUN set -eux \
 # Switch mirrors for Alpine
-    cp /etc/apk/repositories /etc/apk/repositories.bak; \
-    echo "http://mirrors.aliyun.com/alpine/v3.13/main/" > /etc/apk/repositories; \
-    echo "http://mirrors.aliyun.com/alpine/v3.13/community/" >> /etc/apk/repositories; \
+    && cp /etc/apk/repositories /etc/apk/repositories.bak \
+    && echo "http://mirrors.aliyun.com/alpine/v3.13/main/" > /etc/apk/repositories \
+    && echo "http://mirrors.aliyun.com/alpine/v3.13/community/" >> /etc/apk/repositories \
 # Install
-    apk add --no-cache aria2
+    && apk add --no-cache aria2
 
 RUN addgroup download; adduser -G download -D download
 USER download
