--- a/docker/flask/Dockerfile-ubuntu
+++ b/docker/flask/Dockerfile-ubuntu
@@ -8,16 +8,16 @@ FROM ubuntu:groovy
 
 MAINTAINER Fan Hongtao <fanhongtao@gmail.com>
 
-RUN set -eux; \
+RUN set -eux \
 # Switch mirrors for Ubuntu
-    cp /etc/apt/sources.list /etc/apt/sources.list.bak; \
-    sed -i 's/security.ubuntu/mirrors.aliyun/g' /etc/apt/sources.list; \
-    sed -i 's/archive.ubuntu/mirrors.aliyun/g' /etc/apt/sources.list
+    && cp /etc/apt/sources.list /etc/apt/sources.list.bak \
+    && sed -i 's/security.ubuntu/mirrors.aliyun/g' /etc/apt/sources.list \
+    && sed -i 's/archive.ubuntu/mirrors.aliyun/g' /etc/apt/sources.list
 
 # Install
-RUN apt update; \
-    apt install -y python3 python3-pip; \
-    pip3 install flask -i https://mirrors.aliyun.com/pypi/simple/
+RUN apt update \
+    && apt install -y python3 python3-pip \
+    && pip3 install flask -i https://mirrors.aliyun.com/pypi/simple/
 
 WORKDIR /app
 EXPOSE 5000
